--- a/htc.html
+++ b/htc.html
@@ -34,7 +34,7 @@
             <div class="max-width">
                 <div class="logo"><a href="./main.html">NFT<span>ishka.</span></a></div>
                 <ul class="menu">
-                    <li><a href="./main.html" class="menu-btn">Home</a></li>
+                    <li><a href="./index.html" class="menu-btn">Home</a></li>
                     <li><a href="#whatis" class="menu-btn">What is</a></li>
                     <li><a href="#about" class="menu-btn">About</a></li>
                     <li><a href="#step" class="menu-btn">Step by step</a></li>
