--- a/coll.html
+++ b/coll.html
@@ -31,7 +31,7 @@
             <div class="max-width">
                 <div class="logo"><a href="./main.html">NFT<span>ishka.</span></a></div>
                 <ul class="menu">
-                    <li><a href="./main.html" class="menu-btn">Home</a></li>
+                    <li><a href="./index.html" class="menu-btn">Home</a></li>
                     <li><a href="./crypto.html" class="menu-btn">Cryptopunks</a></li>
                     <li><a href="./coll.html" class="menu-btn">Collections</a></li>
                     <li><a href="./htc.html" class="menu-btn">About</a></li>
