--- a/htc.html
+++ b/htc.html
@@ -39,6 +39,7 @@
                     <li><a href="#about" class="menu-btn">About</a></li>
                     <li><a href="#step" class="menu-btn">Step by step</a></li>
                     <li><a href="#skills" class="menu-btn">Skills</a></li>
+                    <li class="login"><a href="./login.html" class="menu-btn">Sing in</a></li>
                 </ul>
                 <div class="menu-btn">
                     <i class="fas fa-bars"></i>
