--- a/crypto.html
+++ b/crypto.html
@@ -36,6 +36,7 @@
                     <li><a href="./crypto.html" class="menu-btn">Cryptopunks</a></li>
                     <li><a href="./coll.html" class="menu-btn">Collections</a></li>
                     <li><a href="./htc.html" class="menu-btn">About</a></li>
+                    <li class="login"><a href="./login.html" class="menu-btn">Sing in</a></li>
                 </ul>
                 <div class="menu-btn">
                     <i class="fas fa-bars"></i>
