--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <div class="shape"></div>
         <div class="shape"></div>
     </div>
-    <form action="./main.html" method="get" name="form">
+    <form action="./index.html" method="get" name="form">
         <h3>Login Here</h3>
 
         <label for="username">Username</label>
