--- a/apple2.html
+++ b/apple2.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./login.css">
+    <link rel="shortcut icon" href="./img/login1.png" type="image/png">
 
 </head>
 
