--- a/coll.html
+++ b/coll.html
@@ -29,7 +29,7 @@
         <!-- Header -->
         <nav class="navbar">
             <div class="max-width">
-                <div class="logo"><a href="./main.html">NFT<span>ishka.</span></a></div>
+                     <div class="logo"><a href="./index.html">NFT<span>ishka.</span></a></div>
                 <ul class="menu">
                     <li><a href="./index.html" class="menu-btn">Home</a></li>
                     <li><a href="./crypto.html" class="menu-btn">Cryptopunks</a></li>
