--- a/coll.html
+++ b/coll.html
@@ -35,7 +35,7 @@
                     <li><a href="./crypto.html" class="menu-btn">Cryptopunks</a></li>
                     <li><a href="./coll.html" class="menu-btn">Collections</a></li>
                     <li><a href="./htc.html" class="menu-btn">About</a></li>
-                    <li class="login"><a href="./login.html" class="menu-btn">Sing in</a></li>
+                    <li><a href="./login.html" class="menu-btn" id="sing">Sign in</a></li>
                 </ul>
                 <div class="menu-btn">
                     <i class="fas fa-bars"></i>
