--- a/kdzwx.html
+++ b/kdzwx.html
@@ -16,7 +16,7 @@
     </div>
     <div class="two">
         <h1>Топ 10 причин, почему Кристинка Захарчук самая крутая </h1>
-        <p>А здесь и не нужны какие то причины, ведь все и так знают что ты самая крутая</p>
+        <p>А здесь и не нужны какие то причины, ведь все и так знают, что ты самая крутая</p>
     </div>
 </div>
 </body>
