--- a/kdzwx.html
+++ b/kdzwx.html
@@ -17,6 +17,8 @@
     <div class="two">
         <h1>Топ 10 причин, почему Кристинка Захарчук самая крутая </h1>
         <p>А здесь и не нужны какие то причины, ведь все и так знают, что ты самая крутая</p>
+                <p>В мире есть такое чудо, </br>Под названием Кристина</br> Кто Кристину не видал</br> Много в жизни потерял!</p>
+
     </div>
 </div>
 </body>
