--- a/thx.html
+++ b/thx.html
@@ -14,7 +14,7 @@
         <div class="shape"></div>
         <div class="shape"></div>
     </div>
-    <form action="./main.html" method="get" name="form">
+    <form action="./index.html" method="get" name="form">
         <h1>Thank you for using our site!</h1>
         <button type="submit">Go to site</button>
     </form>
